--- a/client/views/users/users.jade
+++ b/client/views/users/users.jade
@@ -1,18 +1,6 @@
 h3 {{name | uppercase}}
 
 .row
-  .col-xs-4
-    form(name='userForm', novalidate)
-      .form-group
-        label(for='email') Email
-        input.form-control#email(type='email', name='email', ng-model='user.email')
-      .form-group
-        label(for='password') Password
-        input.form-control#password(type='password', name='password', ng-model='user.password')
-      .form-group
-        button.btn.btn-default(ng-click='submit(user)') Email
-        button.btn.btn-primary(ng-click='oauth("twitter")'): i.fa.fa-twitter
-        button.btn.btn-success(ng-click='oauth("google")'): i.fa.fa-google
-        button.btn.btn-info(ng-click='oauth("facebook")'): i.fa.fa-facebook
-        button.btn.btn-warning(ng-click='oauth("github")'): i.fa.fa-github
-  .col-xs-8
+  .col.s12.m8.lg6.offset-m2.offset-l3
+    button.btn.center-align.flow-text.waves-effect#log(ng-click='oauth()'): i.fa.fa-spotify.fa-2x &nbsp Login with Spotify
+  //- .col-xs-12.col-sm-8.col-sm-offset-2.col-md-6.col-md-offset-3.col-lg-4.col-lg-offset-4
