--- a/client/index.less
+++ b/client/index.less
@@ -1,3 +1,16 @@
-#log .nav-wrapper{
+#log{
   background-color: #648F00 !important;
+}
+/* a{
+  font-size: .6em !important;
+} */
+.thumb{
+  max-width: 45px;
+  margin-top: .5em;
+}
+.out{
+  color: #F7201B;
+}
+.pro{
+  border-radius: 4px;
 }
