--- a/client/index.jade
+++ b/client/index.jade
@@ -5,8 +5,8 @@ html(lang='en', ng-app='findify')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title findify
-    link(rel='stylesheet', href='/vendor/materialize/dist/css/materialize.css')
-    //- link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/superhero/bootstrap.min.css')
+    //- link(rel='stylesheet', href='/vendor/materialize/dist/css/materialize.css')
+    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/readable/bootstrap.min.css')
     link(rel='stylesheet', href='/vendor/font-awesome/css/font-awesome.min.css')
     link(rel='stylesheet', href='/vendor/sweetalert/dist/sweetalert.css')
     link(rel='stylesheet', href=isProd ? '/index.min.css' : '/index.css')
@@ -19,8 +19,8 @@ html(lang='en', ng-app='findify')
           div(ui-view)
 
     script(src='/vendor/jquery/dist/jquery.min.js')
-    //- script(src='/vendor/bootstrap/dist/js/bootstrap.min.js')
-    script(src='/vendor/materialize/dist/js/materialize.js')
+    script(src='/vendor/bootstrap/dist/js/bootstrap.min.js')
+    //- script(src='/vendor/materialize/dist/js/materialize.js')
     script(src='/vendor/lodash/lodash.min.js')
     script(src='/vendor/firebase/firebase.js')
     script(src='/vendor/sweetalert/dist/sweetalert.min.js')
