--- a/client/views/users/users.jade
+++ b/client/views/users/users.jade
@@ -1,6 +1,5 @@
 h3 {{name | uppercase}}
 
 .row
-  .col.s12.m8.lg6.offset-m2.offset-l3
-    button.btn.center-align.flow-text.waves-effect#log(ng-click='oauth()'): i.fa.fa-spotify.fa-2x &nbsp Login with Spotify
-  //- .col-xs-12.col-sm-8.col-sm-offset-2.col-md-6.col-md-offset-3.col-lg-4.col-lg-offset-4
+  .col-xs-12.col-sm-8.col-sm-offset-2.col-md-6.col-md-offset-3.col-lg-4.col-lg-offset-4
+    button.btn.btn-lg.btn-block#log(ng-click='oauth()'): i.fa.fa-spotify.fa-2x &nbsp Login with Spotify
